Updated the html to improve user experience

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               class="input-quote"
               id="instructions"
             />
-            <input type="submit" class="submit-button" />
+            <input type="submit" value="Generate Quote" class="submit-button" />
           </form>
           <div class="hint">e.g. Love, Manifesting, or Exercise etc...</div>
         </div>
